--- a/src/styles/messages.css
+++ b/src/styles/messages.css
@@ -416,6 +416,20 @@
 
 @media (max-width: 480px) {
   .messages-wrapper {
+    margin-left: 0 !important;
+    width: 100% !important;
+  }
+
+  .messages-wrapper.sidebar-open {
+    margin-left: 0 !important;
+  }
+
+  .messages-wrapper.sidebar-collapsed {
+    margin-left: 0 !important;
+  }
+
+  .messages-container {
+  .messages-wrapper {
     margin-left: 0;
   }
 
